// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingScreenContent should match the snapshot with title, a child, header hidden 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#FFFFFF",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          Object {
            "zIndex": 1,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomColor": "rgb(216, 216, 216)",
                  "flex": 1,
                  "shadowColor": "rgb(216, 216, 216)",
                  "shadowOffset": Object {
                    "height": 0.5,
                    "width": 0,
                  },
                  "shadowOpacity": 0.85,
                  "shadowRadius": 0,
                }
              }
            />
          </View>
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              Object {
                "height": 44,
                "maxHeight": undefined,
                "minHeight": undefined,
                "opacity": undefined,
                "transform": undefined,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                Object {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                Object {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  Object {
                    "alignItems": "flex-start",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  Object {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "maxWidth": 718,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    Object {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 17,
                      "fontWeight": "600",
                    }
                  }
                >
                  DUMMY ROUTE
                </Text>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  Object {
                    "alignItems": "flex-end",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          activityState={2}
          collapsable={false}
          forwardedRef={[Function]}
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              Array [
                Object {
                  "display": "flex",
                  "overflow": undefined,
                },
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              Object {
                "close": Object {
                  "animation": "spring",
                  "config": Object {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": Object {
                  "animation": "spring",
                  "config": Object {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                forwardedRef={[Function]}
                handlerTag={3}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  Object {
                    "flex": 1,
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                      Object {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    Array [
                      Object {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      Array [
                        Object {
                          "backgroundColor": "#FFFFFF",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <RNCSafeAreaView
                        style={
                          Object {
                            "backgroundColor": "#FFFFFF",
                            "flex": 1,
                            "justifyContent": "center",
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "paddingHorizontal": 24,
                            }
                          }
                        >
                          <View
                            style={
                              Object {
                                "alignItems": "center",
                              }
                            }
                          >
                            <View
                              accessibilityElementsHidden={true}
                              accessible={false}
                              importantForAccessibility="no-hide-descendants"
                            >
                              <View
                                accessibilityHint="Wait for the content load"
                                accessibilityLabel="Loading"
                                accessibilityRole="progressbar"
                                accessible={true}
                                importantForAccessibility="no-hide-descendants"
                                style={
                                  Object {
                                    "height": 48,
                                    "width": 48,
                                  }
                                }
                                testID="LoadingIndicator"
                              >
                                <View
                                  collapsable={false}
                                  style={
                                    Object {
                                      "transform": Array [
                                        Object {
                                          "rotateZ": "0deg",
                                        },
                                      ],
                                    }
                                  }
                                  testID="LoadingSpinnerAnimatedTestID"
                                >
                                  <RNSVGSvgView
                                    align="xMidYMid"
                                    bbHeight={48}
                                    bbWidth={48}
                                    fill="none"
                                    focusable={false}
                                    height={48}
                                    meetOrSlice={0}
                                    minX={0}
                                    minY={0}
                                    style={
                                      Array [
                                        Object {
                                          "backgroundColor": "transparent",
                                          "borderWidth": 0,
                                        },
                                        Object {
                                          "flex": 0,
                                          "height": 48,
                                          "width": 48,
                                        },
                                      ]
                                    }
                                    vbHeight={48}
                                    vbWidth={48}
                                    width={48}
                                  >
                                    <RNSVGGroup
                                      fill={null}
                                      propList={
                                        Array [
                                          "fill",
                                        ]
                                      }
                                    >
                                      <RNSVGDefs>
                                        <RNSVGLinearGradient
                                          gradient={
                                            Array [
                                              0,
                                              736995,
                                              1,
                                              -16040221,
                                            ]
                                          }
                                          gradientTransform={null}
                                          gradientUnits={0}
                                          name="spinner-secondHalf"
                                          x1="0%"
                                          x2="100%"
                                          y1="0%"
                                          y2="0%"
                                        />
                                        <RNSVGLinearGradient
                                          gradient={
                                            Array [
                                              0,
                                              -16040221,
                                              1,
                                              -16040221,
                                            ]
                                          }
                                          gradientTransform={null}
                                          gradientUnits={0}
                                          name="spinner-firstHalf"
                                          x1="0%"
                                          x2="100%"
                                          y1="0%"
                                          y2="0%"
                                        />
                                      </RNSVGDefs>
                                      <RNSVGGroup
                                        fill={
                                          Object {
                                            "payload": 4278190080,
                                            "type": 0,
                                          }
                                        }
                                        propList={
                                          Array [
                                            "strokeWidth",
                                          ]
                                        }
                                        strokeWidth={5}
                                      >
                                        <RNSVGPath
                                          d="M 2.5 24 A 21.5 21.5 0 0 1 45.5 24"
                                          fill={
                                            Object {
                                              "payload": 4278190080,
                                              "type": 0,
                                            }
                                          }
                                          propList={
                                            Array [
                                              "stroke",
                                            ]
                                          }
                                          stroke={
                                            Object {
                                              "brushRef": "spinner-secondHalf",
                                              "type": 1,
                                            }
                                          }
                                        />
                                        <RNSVGPath
                                          d="M 45.5 24 A 21.5 21.5 0 0 1 2.5 24"
                                          fill={
                                            Object {
                                              "payload": 4278190080,
                                              "type": 0,
                                            }
                                          }
                                          propList={
                                            Array [
                                              "stroke",
                                            ]
                                          }
                                          stroke={
                                            Object {
                                              "brushRef": "spinner-firstHalf",
                                              "type": 1,
                                            }
                                          }
                                        />
                                        <RNSVGPath
                                          d="M 2.5 24 A 21.5 21.5 0 0 1 2.5 22.75"
                                          fill={
                                            Object {
                                              "payload": 4278190080,
                                              "type": 0,
                                            }
                                          }
                                          propList={
                                            Array [
                                              "stroke",
                                              "strokeLinecap",
                                            ]
                                          }
                                          stroke={
                                            Object {
                                              "payload": 4278927075,
                                              "type": 0,
                                            }
                                          }
                                          strokeLinecap={1}
                                        />
                                      </RNSVGGroup>
                                    </RNSVGGroup>
                                  </RNSVGSvgView>
                                </View>
                              </View>
                            </View>
                            <View
                              style={
                                Object {
                                  "height": 24,
                                }
                              }
                            />
                            <Text
                              accessibilityLabel="Test Content Title"
                              allowFontScaling={false}
                              color="bluegreyDark"
                              defaultColor="bluegreyDark"
                              defaultWeight="Semibold"
                              font="TitilliumSansPro"
                              fontStyle={
                                Object {
                                  "fontSize": 24,
                                  "lineHeight": 34,
                                }
                              }
                              style={
                                Array [
                                  Object {
                                    "textAlign": "center",
                                  },
                                  Object {
                                    "fontSize": 24,
                                    "lineHeight": 34,
                                  },
                                  Object {
                                    "color": "#17324D",
                                    "fontFamily": "Titillium Sans Pro",
                                    "fontStyle": "normal",
                                    "fontWeight": "600",
                                  },
                                ]
                              }
                              weight="Semibold"
                            >
                              Test Content Title
                            </Text>
                          </View>
                        </View>
                        <Text>
                          My test child
                        </Text>
                      </RNCSafeAreaView>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`LoadingScreenContent should match the snapshot with title, a child, header shown 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#FFFFFF",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          Object {
            "zIndex": 1,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomColor": "rgb(216, 216, 216)",
                  "flex": 1,
                  "shadowColor": "rgb(216, 216, 216)",
                  "shadowOffset": Object {
                    "height": 0.5,
                    "width": 0,
                  },
                  "shadowOpacity": 0.85,
                  "shadowRadius": 0,
                }
              }
            />
          </View>
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              Object {
                "height": 44,
                "maxHeight": undefined,
                "minHeight": undefined,
                "opacity": undefined,
                "transform": undefined,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                Object {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                Object {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  Object {
                    "alignItems": "flex-start",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  Object {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "maxWidth": 718,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    Object {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 17,
                      "fontWeight": "600",
                    }
                  }
                >
                  DUMMY ROUTE
                </Text>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  Object {
                    "alignItems": "flex-end",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          activityState={2}
          collapsable={false}
          forwardedRef={[Function]}
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              Array [
                Object {
                  "display": "flex",
                  "overflow": undefined,
                },
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              Object {
                "close": Object {
                  "animation": "spring",
                  "config": Object {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": Object {
                  "animation": "spring",
                  "config": Object {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                forwardedRef={[Function]}
                handlerTag={4}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  Object {
                    "flex": 1,
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                      Object {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    Array [
                      Object {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      Array [
                        Object {
                          "backgroundColor": "#FFFFFF",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <RNCSafeAreaView
                        edges={
                          Array [
                            "bottom",
                          ]
                        }
                        style={
                          Object {
                            "backgroundColor": "#FFFFFF",
                            "flex": 1,
                            "justifyContent": "center",
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "paddingHorizontal": 24,
                            }
                          }
                        >
                          <View
                            style={
                              Object {
                                "alignItems": "center",
                              }
                            }
                          >
                            <View
                              accessibilityElementsHidden={true}
                              accessible={false}
                              importantForAccessibility="no-hide-descendants"
                            >
                              <View
                                accessibilityHint="Wait for the content load"
                                accessibilityLabel="Loading"
                                accessibilityRole="progressbar"
                                accessible={true}
                                importantForAccessibility="no-hide-descendants"
                                style={
                                  Object {
                                    "height": 48,
                                    "width": 48,
                                  }
                                }
                                testID="LoadingIndicator"
                              >
                                <View
                                  collapsable={false}
                                  style={
                                    Object {
                                      "transform": Array [
                                        Object {
                                          "rotateZ": "0deg",
                                        },
                                      ],
                                    }
                                  }
                                  testID="LoadingSpinnerAnimatedTestID"
                                >
                                  <RNSVGSvgView
                                    align="xMidYMid"
                                    bbHeight={48}
                                    bbWidth={48}
                                    fill="none"
                                    focusable={false}
                                    height={48}
                                    meetOrSlice={0}
                                    minX={0}
                                    minY={0}
                                    style={
                                      Array [
                                        Object {
                                          "backgroundColor": "transparent",
                                          "borderWidth": 0,
                                        },
                                        Object {
                                          "flex": 0,
                                          "height": 48,
                                          "width": 48,
                                        },
                                      ]
                                    }
                                    vbHeight={48}
                                    vbWidth={48}
                                    width={48}
                                  >
                                    <RNSVGGroup
                                      fill={null}
                                      propList={
                                        Array [
                                          "fill",
                                        ]
                                      }
                                    >
                                      <RNSVGDefs>
                                        <RNSVGLinearGradient
                                          gradient={
                                            Array [
                                              0,
                                              736995,
                                              1,
                                              -16040221,
                                            ]
                                          }
                                          gradientTransform={null}
                                          gradientUnits={0}
                                          name="spinner-secondHalf"
                                          x1="0%"
                                          x2="100%"
                                          y1="0%"
                                          y2="0%"
                                        />
                                        <RNSVGLinearGradient
                                          gradient={
                                            Array [
                                              0,
                                              -16040221,
                                              1,
                                              -16040221,
                                            ]
                                          }
                                          gradientTransform={null}
                                          gradientUnits={0}
                                          name="spinner-firstHalf"
                                          x1="0%"
                                          x2="100%"
                                          y1="0%"
                                          y2="0%"
                                        />
                                      </RNSVGDefs>
                                      <RNSVGGroup
                                        fill={
                                          Object {
                                            "payload": 4278190080,
                                            "type": 0,
                                          }
                                        }
                                        propList={
                                          Array [
                                            "strokeWidth",
                                          ]
                                        }
                                        strokeWidth={5}
                                      >
                                        <RNSVGPath
                                          d="M 2.5 24 A 21.5 21.5 0 0 1 45.5 24"
                                          fill={
                                            Object {
                                              "payload": 4278190080,
                                              "type": 0,
                                            }
                                          }
                                          propList={
                                            Array [
                                              "stroke",
                                            ]
                                          }
                                          stroke={
                                            Object {
                                              "brushRef": "spinner-secondHalf",
                                              "type": 1,
                                            }
                                          }
                                        />
                                        <RNSVGPath
                                          d="M 45.5 24 A 21.5 21.5 0 0 1 2.5 24"
                                          fill={
                                            Object {
                                              "payload": 4278190080,
                                              "type": 0,
                                            }
                                          }
                                          propList={
                                            Array [
                                              "stroke",
                                            ]
                                          }
                                          stroke={
                                            Object {
                                              "brushRef": "spinner-firstHalf",
                                              "type": 1,
                                            }
                                          }
                                        />
                                        <RNSVGPath
                                          d="M 2.5 24 A 21.5 21.5 0 0 1 2.5 22.75"
                                          fill={
                                            Object {
                                              "payload": 4278190080,
                                              "type": 0,
                                            }
                                          }
                                          propList={
                                            Array [
                                              "stroke",
                                              "strokeLinecap",
                                            ]
                                          }
                                          stroke={
                                            Object {
                                              "payload": 4278927075,
                                              "type": 0,
                                            }
                                          }
                                          strokeLinecap={1}
                                        />
                                      </RNSVGGroup>
                                    </RNSVGGroup>
                                  </RNSVGSvgView>
                                </View>
                              </View>
                            </View>
                            <View
                              style={
                                Object {
                                  "height": 24,
                                }
                              }
                            />
                            <Text
                              accessibilityLabel="Test Content Title"
                              allowFontScaling={false}
                              color="bluegreyDark"
                              defaultColor="bluegreyDark"
                              defaultWeight="Semibold"
                              font="TitilliumSansPro"
                              fontStyle={
                                Object {
                                  "fontSize": 24,
                                  "lineHeight": 34,
                                }
                              }
                              style={
                                Array [
                                  Object {
                                    "textAlign": "center",
                                  },
                                  Object {
                                    "fontSize": 24,
                                    "lineHeight": 34,
                                  },
                                  Object {
                                    "color": "#17324D",
                                    "fontFamily": "Titillium Sans Pro",
                                    "fontStyle": "normal",
                                    "fontWeight": "600",
                                  },
                                ]
                              }
                              weight="Semibold"
                            >
                              Test Content Title
                            </Text>
                          </View>
                        </View>
                        <Text>
                          My test child
                        </Text>
                      </RNCSafeAreaView>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`LoadingScreenContent should match the snapshot with title, no children, header hidden 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#FFFFFF",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          Object {
            "zIndex": 1,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomColor": "rgb(216, 216, 216)",
                  "flex": 1,
                  "shadowColor": "rgb(216, 216, 216)",
                  "shadowOffset": Object {
                    "height": 0.5,
                    "width": 0,
                  },
                  "shadowOpacity": 0.85,
                  "shadowRadius": 0,
                }
              }
            />
          </View>
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              Object {
                "height": 44,
                "maxHeight": undefined,
                "minHeight": undefined,
                "opacity": undefined,
                "transform": undefined,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                Object {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                Object {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  Object {
                    "alignItems": "flex-start",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  Object {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "maxWidth": 718,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    Object {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 17,
                      "fontWeight": "600",
                    }
                  }
                >
                  DUMMY ROUTE
                </Text>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  Object {
                    "alignItems": "flex-end",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          activityState={2}
          collapsable={false}
          forwardedRef={[Function]}
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              Array [
                Object {
                  "display": "flex",
                  "overflow": undefined,
                },
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              Object {
                "close": Object {
                  "animation": "spring",
                  "config": Object {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": Object {
                  "animation": "spring",
                  "config": Object {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                forwardedRef={[Function]}
                handlerTag={1}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  Object {
                    "flex": 1,
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                      Object {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    Array [
                      Object {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      Array [
                        Object {
                          "backgroundColor": "#FFFFFF",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <RNCSafeAreaView
                        style={
                          Object {
                            "backgroundColor": "#FFFFFF",
                            "flex": 1,
                            "justifyContent": "center",
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "paddingHorizontal": 24,
                            }
                          }
                        >
                          <View
                            style={
                              Object {
                                "alignItems": "center",
                              }
                            }
                          >
                            <View
                              accessibilityElementsHidden={true}
                              accessible={false}
                              importantForAccessibility="no-hide-descendants"
                            >
                              <View
                                accessibilityHint="Wait for the content load"
                                accessibilityLabel="Loading"
                                accessibilityRole="progressbar"
                                accessible={true}
                                importantForAccessibility="no-hide-descendants"
                                style={
                                  Object {
                                    "height": 48,
                                    "width": 48,
                                  }
                                }
                                testID="LoadingIndicator"
                              >
                                <View
                                  collapsable={false}
                                  style={
                                    Object {
                                      "transform": Array [
                                        Object {
                                          "rotateZ": "0deg",
                                        },
                                      ],
                                    }
                                  }
                                  testID="LoadingSpinnerAnimatedTestID"
                                >
                                  <RNSVGSvgView
                                    align="xMidYMid"
                                    bbHeight={48}
                                    bbWidth={48}
                                    fill="none"
                                    focusable={false}
                                    height={48}
                                    meetOrSlice={0}
                                    minX={0}
                                    minY={0}
                                    style={
                                      Array [
                                        Object {
                                          "backgroundColor": "transparent",
                                          "borderWidth": 0,
                                        },
                                        Object {
                                          "flex": 0,
                                          "height": 48,
                                          "width": 48,
                                        },
                                      ]
                                    }
                                    vbHeight={48}
                                    vbWidth={48}
                                    width={48}
                                  >
                                    <RNSVGGroup
                                      fill={null}
                                      propList={
                                        Array [
                                          "fill",
                                        ]
                                      }
                                    >
                                      <RNSVGDefs>
                                        <RNSVGLinearGradient
                                          gradient={
                                            Array [
                                              0,
                                              736995,
                                              1,
                                              -16040221,
                                            ]
                                          }
                                          gradientTransform={null}
                                          gradientUnits={0}
                                          name="spinner-secondHalf"
                                          x1="0%"
                                          x2="100%"
                                          y1="0%"
                                          y2="0%"
                                        />
                                        <RNSVGLinearGradient
                                          gradient={
                                            Array [
                                              0,
                                              -16040221,
                                              1,
                                              -16040221,
                                            ]
                                          }
                                          gradientTransform={null}
                                          gradientUnits={0}
                                          name="spinner-firstHalf"
                                          x1="0%"
                                          x2="100%"
                                          y1="0%"
                                          y2="0%"
                                        />
                                      </RNSVGDefs>
                                      <RNSVGGroup
                                        fill={
                                          Object {
                                            "payload": 4278190080,
                                            "type": 0,
                                          }
                                        }
                                        propList={
                                          Array [
                                            "strokeWidth",
                                          ]
                                        }
                                        strokeWidth={5}
                                      >
                                        <RNSVGPath
                                          d="M 2.5 24 A 21.5 21.5 0 0 1 45.5 24"
                                          fill={
                                            Object {
                                              "payload": 4278190080,
                                              "type": 0,
                                            }
                                          }
                                          propList={
                                            Array [
                                              "stroke",
                                            ]
                                          }
                                          stroke={
                                            Object {
                                              "brushRef": "spinner-secondHalf",
                                              "type": 1,
                                            }
                                          }
                                        />
                                        <RNSVGPath
                                          d="M 45.5 24 A 21.5 21.5 0 0 1 2.5 24"
                                          fill={
                                            Object {
                                              "payload": 4278190080,
                                              "type": 0,
                                            }
                                          }
                                          propList={
                                            Array [
                                              "stroke",
                                            ]
                                          }
                                          stroke={
                                            Object {
                                              "brushRef": "spinner-firstHalf",
                                              "type": 1,
                                            }
                                          }
                                        />
                                        <RNSVGPath
                                          d="M 2.5 24 A 21.5 21.5 0 0 1 2.5 22.75"
                                          fill={
                                            Object {
                                              "payload": 4278190080,
                                              "type": 0,
                                            }
                                          }
                                          propList={
                                            Array [
                                              "stroke",
                                              "strokeLinecap",
                                            ]
                                          }
                                          stroke={
                                            Object {
                                              "payload": 4278927075,
                                              "type": 0,
                                            }
                                          }
                                          strokeLinecap={1}
                                        />
                                      </RNSVGGroup>
                                    </RNSVGGroup>
                                  </RNSVGSvgView>
                                </View>
                              </View>
                            </View>
                            <View
                              style={
                                Object {
                                  "height": 24,
                                }
                              }
                            />
                            <Text
                              accessibilityLabel="Test Content Title"
                              allowFontScaling={false}
                              color="bluegreyDark"
                              defaultColor="bluegreyDark"
                              defaultWeight="Semibold"
                              font="TitilliumSansPro"
                              fontStyle={
                                Object {
                                  "fontSize": 24,
                                  "lineHeight": 34,
                                }
                              }
                              style={
                                Array [
                                  Object {
                                    "textAlign": "center",
                                  },
                                  Object {
                                    "fontSize": 24,
                                    "lineHeight": 34,
                                  },
                                  Object {
                                    "color": "#17324D",
                                    "fontFamily": "Titillium Sans Pro",
                                    "fontStyle": "normal",
                                    "fontWeight": "600",
                                  },
                                ]
                              }
                              weight="Semibold"
                            >
                              Test Content Title
                            </Text>
                          </View>
                        </View>
                      </RNCSafeAreaView>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`LoadingScreenContent should match the snapshot with title, no children, header shown 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#FFFFFF",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          Object {
            "zIndex": 1,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomColor": "rgb(216, 216, 216)",
                  "flex": 1,
                  "shadowColor": "rgb(216, 216, 216)",
                  "shadowOffset": Object {
                    "height": 0.5,
                    "width": 0,
                  },
                  "shadowOpacity": 0.85,
                  "shadowRadius": 0,
                }
              }
            />
          </View>
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              Object {
                "height": 44,
                "maxHeight": undefined,
                "minHeight": undefined,
                "opacity": undefined,
                "transform": undefined,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                Object {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                Object {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  Object {
                    "alignItems": "flex-start",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  Object {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "maxWidth": 718,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    Object {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 17,
                      "fontWeight": "600",
                    }
                  }
                >
                  DUMMY ROUTE
                </Text>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  Object {
                    "alignItems": "flex-end",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          activityState={2}
          collapsable={false}
          forwardedRef={[Function]}
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              Array [
                Object {
                  "display": "flex",
                  "overflow": undefined,
                },
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              Object {
                "close": Object {
                  "animation": "spring",
                  "config": Object {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": Object {
                  "animation": "spring",
                  "config": Object {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                forwardedRef={[Function]}
                handlerTag={2}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  Object {
                    "flex": 1,
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                      Object {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    Array [
                      Object {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      Array [
                        Object {
                          "backgroundColor": "#FFFFFF",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <RNCSafeAreaView
                        edges={
                          Array [
                            "bottom",
                          ]
                        }
                        style={
                          Object {
                            "backgroundColor": "#FFFFFF",
                            "flex": 1,
                            "justifyContent": "center",
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "paddingHorizontal": 24,
                            }
                          }
                        >
                          <View
                            style={
                              Object {
                                "alignItems": "center",
                              }
                            }
                          >
                            <View
                              accessibilityElementsHidden={true}
                              accessible={false}
                              importantForAccessibility="no-hide-descendants"
                            >
                              <View
                                accessibilityHint="Wait for the content load"
                                accessibilityLabel="Loading"
                                accessibilityRole="progressbar"
                                accessible={true}
                                importantForAccessibility="no-hide-descendants"
                                style={
                                  Object {
                                    "height": 48,
                                    "width": 48,
                                  }
                                }
                                testID="LoadingIndicator"
                              >
                                <View
                                  collapsable={false}
                                  style={
                                    Object {
                                      "transform": Array [
                                        Object {
                                          "rotateZ": "0deg",
                                        },
                                      ],
                                    }
                                  }
                                  testID="LoadingSpinnerAnimatedTestID"
                                >
                                  <RNSVGSvgView
                                    align="xMidYMid"
                                    bbHeight={48}
                                    bbWidth={48}
                                    fill="none"
                                    focusable={false}
                                    height={48}
                                    meetOrSlice={0}
                                    minX={0}
                                    minY={0}
                                    style={
                                      Array [
                                        Object {
                                          "backgroundColor": "transparent",
                                          "borderWidth": 0,
                                        },
                                        Object {
                                          "flex": 0,
                                          "height": 48,
                                          "width": 48,
                                        },
                                      ]
                                    }
                                    vbHeight={48}
                                    vbWidth={48}
                                    width={48}
                                  >
                                    <RNSVGGroup
                                      fill={null}
                                      propList={
                                        Array [
                                          "fill",
                                        ]
                                      }
                                    >
                                      <RNSVGDefs>
                                        <RNSVGLinearGradient
                                          gradient={
                                            Array [
                                              0,
                                              736995,
                                              1,
                                              -16040221,
                                            ]
                                          }
                                          gradientTransform={null}
                                          gradientUnits={0}
                                          name="spinner-secondHalf"
                                          x1="0%"
                                          x2="100%"
                                          y1="0%"
                                          y2="0%"
                                        />
                                        <RNSVGLinearGradient
                                          gradient={
                                            Array [
                                              0,
                                              -16040221,
                                              1,
                                              -16040221,
                                            ]
                                          }
                                          gradientTransform={null}
                                          gradientUnits={0}
                                          name="spinner-firstHalf"
                                          x1="0%"
                                          x2="100%"
                                          y1="0%"
                                          y2="0%"
                                        />
                                      </RNSVGDefs>
                                      <RNSVGGroup
                                        fill={
                                          Object {
                                            "payload": 4278190080,
                                            "type": 0,
                                          }
                                        }
                                        propList={
                                          Array [
                                            "strokeWidth",
                                          ]
                                        }
                                        strokeWidth={5}
                                      >
                                        <RNSVGPath
                                          d="M 2.5 24 A 21.5 21.5 0 0 1 45.5 24"
                                          fill={
                                            Object {
                                              "payload": 4278190080,
                                              "type": 0,
                                            }
                                          }
                                          propList={
                                            Array [
                                              "stroke",
                                            ]
                                          }
                                          stroke={
                                            Object {
                                              "brushRef": "spinner-secondHalf",
                                              "type": 1,
                                            }
                                          }
                                        />
                                        <RNSVGPath
                                          d="M 45.5 24 A 21.5 21.5 0 0 1 2.5 24"
                                          fill={
                                            Object {
                                              "payload": 4278190080,
                                              "type": 0,
                                            }
                                          }
                                          propList={
                                            Array [
                                              "stroke",
                                            ]
                                          }
                                          stroke={
                                            Object {
                                              "brushRef": "spinner-firstHalf",
                                              "type": 1,
                                            }
                                          }
                                        />
                                        <RNSVGPath
                                          d="M 2.5 24 A 21.5 21.5 0 0 1 2.5 22.75"
                                          fill={
                                            Object {
                                              "payload": 4278190080,
                                              "type": 0,
                                            }
                                          }
                                          propList={
                                            Array [
                                              "stroke",
                                              "strokeLinecap",
                                            ]
                                          }
                                          stroke={
                                            Object {
                                              "payload": 4278927075,
                                              "type": 0,
                                            }
                                          }
                                          strokeLinecap={1}
                                        />
                                      </RNSVGGroup>
                                    </RNSVGGroup>
                                  </RNSVGSvgView>
                                </View>
                              </View>
                            </View>
                            <View
                              style={
                                Object {
                                  "height": 24,
                                }
                              }
                            />
                            <Text
                              accessibilityLabel="Test Content Title"
                              allowFontScaling={false}
                              color="bluegreyDark"
                              defaultColor="bluegreyDark"
                              defaultWeight="Semibold"
                              font="TitilliumSansPro"
                              fontStyle={
                                Object {
                                  "fontSize": 24,
                                  "lineHeight": 34,
                                }
                              }
                              style={
                                Array [
                                  Object {
                                    "textAlign": "center",
                                  },
                                  Object {
                                    "fontSize": 24,
                                    "lineHeight": 34,
                                  },
                                  Object {
                                    "color": "#17324D",
                                    "fontFamily": "Titillium Sans Pro",
                                    "fontStyle": "normal",
                                    "fontWeight": "600",
                                  },
                                ]
                              }
                              weight="Semibold"
                            >
                              Test Content Title
                            </Text>
                          </View>
                        </View>
                      </RNCSafeAreaView>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaProvider>
</View>
`;
